<resources>
    <string name="app_name">Ben\'s Fitness App</string>
    <string name="report_details_label">Today\'s Details</string>
    <string name="report_photo_button_description">Take photo</string>
    <string name="report_photo_no_image_description">Report photo (not set)</string>
    <string name="report_photo_image_description">Report photo (set)</string>
    <string name="date">Date:</string>
    <string name="new_report">New Report</string>
    <string name="subtitle_format">%1$d reports</string>
    <string name="report_client_text">Choose Client</string>
    <string name="report_report_text">Send Report</string>
    <string name="report_report_client">Client name.</string>
    <string name="report_report_subject">Ben\'s Fitness App Report</string>
    <string name="send_report">Send report via</string>

    <string name="client_name">Client Name</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="client_age">Age</string>
    <string name="client_gender">Gender</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="client_birthday">Birthday</string>
    <string name="client_weight">Weight</string>

    <string name="enter_weight">Enter Today\'s Weight:</string>
    <string name="exercises">Today\'s workout:</string>
    <string name="exercise_name">Enter exercise name.</string>
    <string name="reps">Enter # of reps</string>
    <string name="workout_weight">Enter weight used:</string>
    <string name="comments">Enter comments</string>

    <string name="nutrition">Today\'s nutrition:</string>
    <string name="food_item">Enter food item:</string>
    <string name="calories">Calories:</string>
    <string name="fats">Amount of fat in grams:</string>
    <string name="carbs">Amount of carbs in grams:</string>
    <string name="protein">Amount of protein in grams:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
